Bug 1733284: Part 1: Expose Windows packaged app utilities to code outside of XUL. r=mhowell

This re-arranges some deckchairs, allowing to have the launcher
process query the Windows packaged app environment.

Depends on D129882

Differential Revision: https://phabricator.services.mozilla.com/D130187